# django-ai-po

./: .gitignore  README.md  pyproject.toml
django_ai_po/: __init__.py  apps.py  conf.py  discovery.py  plural.py
django_ai_po/management/commands/: translate_po.py
django_ai_po/translator/: base.py  prompts.py  validators.py
tests/: conftest.py  settings.py  test_conf.py  test_discovery.py  test_plural.py  test_prompts.py  test_translator.py  test_validators.py
