[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ai-po"
version = "0.1.1"
description = "AI-powered .po file translator for Django using LiteLLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Ismail" },
]
keywords = ["django", "translation", "po", "i18n", "ai", "llm", "litellm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
]
dependencies = [
    "django>=4.2",
    "polib>=1.2",
    "litellm>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[project.urls]
Homepage = "https://github.com/ismail-mosa/django-ai-po"
Repository = "https://github.com/ismail-mosa/django-ai-po"

[tool.setuptools.packages.find]
include = ["django_ai_po*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
